--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -484,6 +484,7 @@ $common-top-bar-filter-button-dropdown-label-margin: 4px 3px;
 $nav-panel-button-margin-left-right: 10px;
 $nav-panel-button-icon-margin-right: 10px;
 $nav-panel-button-list-sub-overflow-container-margin-top-bottom: 10px;
+$nav-panel-button-list-sub-overflow-container-for-bugs-margin-bottom: 0px;
 $account-sidebar-contents-margin-top-bottom: 9px;
 $account-sidebar-dividing-line-margin-top-bottom: 34px;
 $account-sidebar-dividing-line-margin-top-bottom-half: $account-sidebar-dividing-line-margin-top-bottom /
@@ -572,6 +573,8 @@ $common-top-bar-search-bar-padding: 8px;
 $navbar-breadcrumb-padding: 0 3px 0 25px;
 $navbar-breadcrumb-button-icon-padding: 0 15px 0 13px;
 $navbar-solo-title-padding: $navbar-breadcrumb-padding;
+$nav-panel-button-list-sub-overflow-container-padding-top-bottom: 10px;
+$nav-panel-button-list-sub-overflow-container-for-bugs-padding-bottom: 20px;
 $nav-panel-button-list-main-item-padding-left-right: 10px;
 $nav-panel-button-list-sub-item-padding-left: $nav-panel-button-list-main-item-padding-left-right +
 	$nav-panel-button-icon-margin-right + 5; // 5 was chosen by eyeing what looked good
