--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -349,9 +349,9 @@
 .nav-panel-button-list-component .js-get-nav-panel-button-list-component-sub-overflow-container--scrollbar-present,
 .js-get-nav-panel-button-list-component .sub-overflow-container--scrollbar-present,
 .js-get-nav-panel-button-list-component .js-get-nav-panel-button-list-component-sub-overflow-container--scrollbar-present {
-  margin-top: 10px;
+  margin: 10px 0;
   box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.1);
-  padding: 10px 0 20px 0;
+  padding: 10px 0;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #cdcdcd #ffffff00;
@@ -384,11 +384,12 @@
 .js-get-nav-panel-button-list-component .js-get-nav-panel-button-list-component-sub-overflow-container--scrollbar-present ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-.nav-panel-button-list-component .sub-overflow-container--bottom-spacing,
-.nav-panel-button-list-component .js-get-nav-panel-button-list-component-sub-overflow-container--bottom-spacing,
-.js-get-nav-panel-button-list-component .sub-overflow-container--bottom-spacing,
-.js-get-nav-panel-button-list-component .js-get-nav-panel-button-list-component-sub-overflow-container--bottom-spacing {
-  margin-bottom: 10px;
+.nav-panel-button-list-component .sub-overflow-container--for-bugs,
+.nav-panel-button-list-component .js-get-nav-panel-button-list-component-sub-overflow-container--for-bugs,
+.js-get-nav-panel-button-list-component .sub-overflow-container--for-bugs,
+.js-get-nav-panel-button-list-component .js-get-nav-panel-button-list-component-sub-overflow-container--for-bugs {
+  margin-bottom: 0px;
+  padding-bottom: 20px;
 }
 .nav-panel-button-list-component .sub-overflow-container--fade-in,
 .js-get-nav-panel-button-list-component .sub-overflow-container--fade-in {
@@ -460,6 +461,7 @@
 .nav-panel-button-list-component .list-button--unclickable,
 .js-get-nav-panel-button-list-component .list-button--unclickable {
   color: #464646;
+  cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
